2021. 5. 8. Reflected -ansi option of zeda-makefile-gen. [app]
2021. 5. 7. Made tools/, and modified makefiles. [dzco, app, tools]
2021. 4.29. Modified app/makefile. [app]
2021. 4.29. Reflected new specification of zeda-config-gen. [app]
2021. 3.31. Reflect modification of ZEDA and abolished *RegZTK. [dz_tf, dz_lin, dz_sys*]
2021. 3.31. Modified makefile to separately make and install library and applications. [makefile]
2020.11. 8. Modified lqr_test in example and lin_test in test. [example, test]
2020. 5.12. Reflect new specification of zOptSolveNM. [dz_ident_lag]
2020. 4. 3. Debugged dz_tf2zeropole conforming to new specification of dzTF. [app]
2019.11.27. Reimplemented dzFreqResFromTF. [dz_tf_fr]
2019.11.27. Modified specification of dzTFZeroPole. [dz_tf]
2019.11.27. Added zero and pole members to dzTF class and modified some related functions. [dz_tf]
2019.11.27. Modified dzTFInit. [dz_tf]
2019.11.27. Modified dzTFCreateZeroPole to accept gain. [dz_tf]
2019.11.22. Rewrote README as a markdown file. [README]
2019.10. 7. Debugged _dzTFGainFromZTK. [dz_tf]
2019.10. 5. Modified dzTFFExpr. [dz_tf]
2019.10. 4. Added _dzTFZeroFromZTK, _dzTFPoleFromZTK and _dzTFGainFromZTK in order to directly read zeros and poles from a ZTK file. [dz_tf]
2019.10. 3. Added _dzTFConnectPex and modified dzTFConnect. [dz_tf]
2019.10. 2. Debugged dz_fr2tf. [app]
2019.10. 1. Enabled make uninstall. [makefile]
2019. 9.30. Reflected new specification of zIsEqual in dzTFZeroPoleReIm, _dzFreqResMul and _dzFreqResDiv. [dz_tf, dz_tf_fr]
2019. 9.30. Added dzTFConnect. [dz_tf]
2019. 9.30. Added dzTFInit. [dz_tf]
2019. 9.29. Modified _dzFreqResConnectTF. [dz_tf_fr]
2019. 9.29. Added dzFreqResFromTF. [dz_tf_fr]
2019. 9.29. Renamed dzTFFreqRes to dzTFToComplex and moved from dz_tf to dz_tf_fr. [dz_tf, dz_tf_fr, app]
2019. 9.29. Renamed dz_tf_ident_fr to dz_tf_fr. [dz_tf, dz_tf_fr]
2019. 9.29. Modified dzFreqRes2Closed and dzFreqRes2Open. [dz_tf_ident_fr]