@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.4.3
+VERSION=1.4.4
 
-DEPENDENCY="zeda=1.5.10;zm=1.3.5"
+DEPENDENCY="zeda=1.6.3;zm=1.3.12"
